# aria

./: .gitignore  ARC2_STEP_BY_STEP.md  DESIGN.md  changelog.md  pyproject.toml  requirements-training.txt
aria/: consensus.py  consensus_search.py  consensus_trace.py  correspondence.py  correspondence_enclosed.py  datasets.py  decompose.py  decomposition.py  diagnosis.py  enumerate.py  eval.py  explanation.py  factor_instantiate.py  factored_memory.py  factored_retrieval.py  factored_trace.py  factors.py  hypotheses.py  inspection.py  local_policy.py  mutation.py  near_miss_compose.py  observe.py  offline_search.py  periodicity.py  policy_eval.py  predicate_dispatch.py  predicates.py  program_store.py  refinement.py  repair.py  reporting.py  retrieval.py  scene_ir.py  scoring.py  sketch.py  sketch_compile.py  sketch_fit.py  sketch_rank.py  snapshot.py  (+9 more)
data/: search_traces.jsonl
docs/: AGI.md  ARIA_SYSTEM_OVERVIEW.md  SCHEMA.md
output/: factored_memory_v2-train.json  task_00576224.html  task_00d62c1b.html  task_05269061.html  task_0962bcdd.html  task_0a938d79.html  task_10fcaaa3.html  task_25ff71a9.html  task_27a77e38.html  task_97c75046.html  task_9f5f939b.html  task_9f8de559.html  task_aabf363d.html  task_b1948b0a.html
prompts/: 01_arc2_task_sketch_cards.md  01_guided_engine_foundation.md  02_sketch_ir.md  02_target_selector.md  03_decomposition_layer.md  03_graph_expansion_guidance.md  04_guided_search_eval.md  04_sketch_fit_two_families.md  05_arc_transfer_slice.md  05_sketch_compiler.md  06_arc_postmortem_and_decision.md  06_sketch_oriented_refinement.md  (+35 more)
(+458 files in other folders)
