[project]
name = "aria"
version = "0.1.0"
description = "Abstract Reasoning via Inductive Abstraction"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
